[package]
name = "wiztree_diff"
version = "0.1.0"
edition = "2021"

[lib]
name = "wiztree_diff_lib"

[env]
RUST_LOG = "debug"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
log = { version = "0.4.25", features = [] }
env_logger = "0.11.6"

[dev-dependencies]
criterion = "0.5.1"
path-clean = "1.0.1"

[[bench]]
name = "wiz_bench"
harness = false