[package]
name = "wiztree_diff"
version = "0.1.0"
edition = "2021"
authors = ["azazo1"]

[lib]
name = "wiztree_diff"
path = "src/lib.rs"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"
path-clean = "1.0.1"

[[bench]]
name = "wiz_bench"
harness = false

[features]
default = []
# 启用则 Snapshot 使用 Arc 而不是 Rc 构建树, 适用于多线程
arc = []
